--- a/main.css
+++ b/main.css
@@ -7,36 +7,80 @@ img {
 }
 
 /* cover */
-#cover {
+#welcome-section {
     background: #222 url('images/computer.jpeg') no-repeat;
     background-size: cover;
     color: #2285ad;
     height: 100%;
-    text-align: center;
     display: flex;
     align-items: center;
     }
-#cover::before{
+#welcome-section::before{
     
 }
-#cover-caption {
+
+#welcome-caption  {
     width: 100%;
+    height: 80%;
+    background-color: #2285ad;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    color: white;
+    opacity: 0.7;
+}
+
+hr {
+    border-width: 0;
+    width: 50%;
+    height: 3px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(41, 225, 255, 0.75), rgba(0, 0, 0, 0));
+}
+
+h1, h2 {
+    text-transform: uppercase;
+    font-weight: 400;
 }
 
 .section-content {
     padding: 5rem 0;
 }
 
-#portfolio{
+#projects{
     color: #2285ad;
 }
 
+.card-footer {
+    background-color: white;
+}
+
+button.card{
+    width: 100%;
+    display: flex;
+    border: 0;
+    align-self: stretch;
+    margin-left: 0;
+}
+
 #about {
-    background: url('images/tiles_background.jpeg') no-repeat;
+    background: url('images/code2.jpg') no-repeat;
     background-size: cover;
 }
+
 .about-text{
-    background: rgba(0,0,0,0.8);
+    background-color: #272E34;
     color: white;
-    padding: 1.8rem;
+    padding: 1.5rem;
 }
+.about{
+    display: flex;
+    
+}
+.about-image{
+    border-radius: 50%;
+    display: flex;
+    align-self: flex-end;
+    height: 100%;
+    width: 100%;
+}
+
