--- a/main.css
+++ b/main.css
@@ -15,9 +15,6 @@ img {
     display: flex;
     align-items: center;
     }
-#welcome-section::before{
-    
-}
 
 #welcome-caption  {
     width: 100%;
@@ -49,7 +46,7 @@ a:hover, a:link, a:active, a:visited {
     padding: 5rem 0;
 }
 
-#projects{
+#projects, #skills, #hobbies{
     color: #2285ad;
 }
 
@@ -64,6 +61,33 @@ button.card{
     align-self: stretch;
     margin-left: 0;
 }
+
+.hobby {
+    float: left;
+    width: 33.333%;
+    padding: .75rem;
+    margin-bottom: 2rem;
+    border: 0;
+  }
+  
+.hobby > img {
+margin-bottom: .75rem;
+max-width: 100%;
+max-height: 100%;
+}
+
+.skill {
+    float: left;
+    width: 20%;
+    padding: .75rem;
+    margin-bottom: 2rem;
+    border: 0;
+}
+
+.card-text {
+font-size: 85%;
+}
+  
 
 #about {
     background: url('images/code2.jpg') no-repeat;
