--- a/main.css
+++ b/main.css
@@ -42,6 +42,10 @@ a:hover, a:link, a:active, a:visited {
     text-decoration: none;
 }
 
+.section {
+    margin-top: 10%;
+}
+
 .section-content {
     padding: 5rem 0;
 }
